# MistEngine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AI_README.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DOCUMENTATION_ORGANIZATION.md  Directory.Build.props  GITHUB_RELEASE_TEMPLATE.md  LAUNCH_SUMMARY.md  MistEngine.sln  MistEngine.vcxproj  MistEngine.vcxproj.backup  MistEngine.vcxproj.bak  MistEngine.vcxproj.filters  README.md  README_UI.md  RELEASE_GUIDE.md  RELEASE_NOTES.md  ReleaseOverride.props  ai_config.example.json  ai_config.json  build_release.bat  build_release.ps1  docs.rar  imgui.ini  manual_build_release.bat  packages.config  vcpkg.json
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: README.md  ai_setup.md  architecture.md  editor_controls.md  scripting.md
docs/development/: COOPERATIVE_MOUSE_FIX.md  FINAL_MOUSE_FIX.md  FINAL_POLLING_SOLUTION.md  GITHUB_PATCH_RELEASE_v0.2.1.md  GITHUB_RELEASE_TEMPLATE.md  MASTER_MOUSE_LOCK_SOLUTION.md  MOUSE_LOOK_LOCK_FIX.md  PATCH_CHANGELOG_v0.2.1.md  PATCH_RELEASE_SUMMARY.md  SCENE_EDITOR_FIXES.md  WASD_INPUT_FIX.md
docs/technical/: IMPLEMENTATION_SUMMARY.md  MODULARITY_GUIDE.md
docs/user-guide/: MODULE_DEPLOYMENT_GUIDE.md  MODULE_DEVELOPMENT_TEMPLATE.md
include/: AnimatedModel.h  Animation.h  Animator.h  Application.h  BackpackGameObject.h  BloomRenderer.h  Camera.h  Collision.h  Components.h  Config.h  ECSManager.h  ECSManager.inl  Enemy.h  FPSGameManager.h  Framebuffer.h  GameExporter.h  GameManager.h  GameObject.h  IBL.h  InputManager.h  Light.h  LightManager.h  Material.h  Mesh.h  Model.h  ModuleManager.h  Orb.h  ParticleSystem.h  Physics.h  PhysicsSystem.h  PhysicsWorld.h  PlaneGameObject.h  PostProcessStack.h  Renderable.h  Renderer.h  RigidBody.h  Room.h  SSAORenderer.h  SSGIRenderer.h  Scene.h  (+13 more)
include/AI/: AIConfig.h  AIManager.h  AIProvider.h  AIWindow.h  GeminiProvider.h  HttpClient.h  OpenAIProvider.h  SimpleJson.h
include/Audio/: AudioClip.h  AudioEngine.h
include/Core/: CommandQueue.h  Engine.h  Logger.h  PathGuard.h  Reflection.h  ServiceLocator.h  Signal.h
include/Debug/: ConsoleSystem.h  DebugDraw.h  Profiler.h
include/ECS/: Component.h  ComponentArray.h  ComponentManager.h  Coordinator.h  Entity.h  EntityManager.h  Event.h  System.h  SystemManager.h  SystemScheduler.h  TypeID.h
include/ECS/Components/: BotComponent.h  (+14 more)
include/Editor/: AssetBrowser.h  EditorPlugin.h  EditorState.h  GameHUD.h  GizmoSystem.h  MistTheme.h  ShortcutRegistry.h  Toaster.h  UndoRedo.h  UndoStack.h
include/Import/: AssetImporter.h  PassThroughImporter.h
include/Input/: InputAction.h  InputContext.h  InputSystem.h
include/Physics/: BulletOwners.h
include/Renderer/: GLRenderingDevice.h  RID.h  RenderingDevice.h  ShaderManager.h  Viewport.h
include/Resources/: AssetRegistry.h  Ref.h  ResourceHandle.h  ResourceManager.h
include/Scene/: AABB.h  Frustum.h  SceneGraph.h  SceneNode.h  SceneSerializer.h
include/Script/: LuaScriptLanguage.h  ScriptLanguage.h  ScriptRegistry.h
include/UI/: EditorUI.h
include/glad/: glad.h
models/: README.md
modules/ExampleModule/: CMakeLists.txt  ExampleModule.sln  ExampleModule.vcxproj  dllmain.cpp
modules/ExampleModule/include/: ExampleModule.h
release-assets/: README.md
release-assets/binaries/: Start-MistEngine.bat  Start-MistEngine.ps1
release-assets/documentation/: Version.h
scripts/: bootstrap.lua  orbits.lua  spinner.lua
shaders/: bloom_composite.frag  bloom_downsample.frag  bloom_upsample.frag  brdf_lut.frag  cluster_build.comp  cluster_cull.comp  crosshair_fragement.glsl  csm_depth.frag  depth_fragment.glsl  depth_vertex.glsl  equirect_to_cubemap.frag  equirect_to_cubemap.vert  fragment.glsl  fxaa.frag  glow_fragment.glsl  irradiance_convolution.frag  lamp.frag  particle.frag  particle.vert  particle_emit.comp  particle_simulate.comp  pbr_fragment.glsl  pbr_vertex.glsl  pcss.glsl  prefilter.frag  skinned_pbr.vert  skybox_atmosphere.frag  skybox_atmosphere.vert  skybox_cubemap.frag  skybox_fragment.glsl  skybox_vertex.glsl  ssao.frag  ssao_blur.frag  ssgi.frag  ssgi_blur.frag  taa.frag  text_fragment.glsl  tonemap.frag  tonemap.vert  velocity.frag  (+2 more)
src/: AnimatedModel.cpp  Animator.cpp  Application.cpp  BackpackGameObject.cpp  BloomRenderer.cpp  Camera.cpp  FPSGameManager.cpp  Framebuffer.cpp  GameExporter.cpp  GameManager.cpp  GameObject.cpp  IBL.cpp  InputManager.cpp  LightManager.cpp  Mesh.cpp  MistEngine.cpp  Model.cpp  ModuleManager.cpp  Orb.cpp  ParticleSystem.cpp  PhysicsSystem.cpp  PhysicsWorld.cpp  PlaneGameObject.cpp  PostProcessStack.cpp  Renderer.cpp  RigidBody.cpp  SSAORenderer.cpp  SSGIRenderer.cpp  Scene.cpp  SceneManager.cpp  Shader.cpp  ShadowSystem.cpp  ShapeGenerator.cpp  SkyboxRenderer.cpp  Systems.cpp  TAARenderer.cpp  Texture.cpp  UIManager.cpp  UniformBufferObjects.cpp  glad.c  (+2 more)
src/AI/: AIConfig.cpp  AIManager.cpp  AIWindow.cpp  GeminiProvider.cpp  HttpClient.cpp  OpenAIProvider.cpp  SimpleJson.cpp
src/Audio/: AudioEngine.cpp
src/Core/: Engine.cpp  Reflection.cpp
src/Debug/: DebugDraw.cpp  Profiler.cpp
src/ECS/: Coordinator.cpp  SystemScheduler.cpp
src/Editor/: EditorPlugin.cpp  EditorUI.cpp  GameHUD.cpp  MistTheme.cpp  ShortcutRegistry.cpp  Toaster.cpp  UndoStack.cpp
src/Import/: PassThroughImporter.cpp
src/Input/: InputSystem.cpp
src/Renderer/: GLRenderingDevice.cpp  ShaderManager.cpp
src/Resources/: AssetRegistry.cpp
src/Scene/: SceneGraph.cpp  SceneSerializer.cpp
src/Script/: LuaScriptLanguage.cpp  ScriptRegistry.cpp
src/UI/: EditorUI.cpp
tests/: CMakeLists.txt  MistEngineTests-b12d07c_include.cmake  test_asset_drop.cpp  test_audio_clip.cpp  test_command_queue.cpp  test_ecs.cpp  test_editor_plugin.cpp  test_fixed_timestep.cpp  test_hierarchy.cpp  test_importer.cpp  test_lua_script.cpp  test_main.cpp  test_path_guard.cpp  test_reflection.cpp  test_renderingdevice.cpp  test_resource_cache.cpp  test_rid.cpp  test_scene_serializer.cpp  test_script_registry.cpp  test_shortcut_registry.cpp  test_signal.cpp  test_undo_integration.cpp  test_undo_stack.cpp  test_version.cpp
(+23 files in other folders)
